--- a/src/app/modules/dashboard/admin-user/admin-user.component.html
+++ b/src/app/modules/dashboard/admin-user/admin-user.component.html
@@ -1,21 +1,23 @@
 <div class="container mt-5"> 
-    <div class="row">
-        <div class="col-lg-8 offset-lg-2">
-            <div class="card">
-            <div class="card-body">
-                <h1 class="titulo">Usuarios</h1>
-            </div>
-            </div>
+    <mat-toolbar>
+        <button mat-raised-button style="background-color: #c72c41" disabled> <mat-icon style="color: white">people</mat-icon> </button>
+        <span style="display:inline-block; width: 10px;"></span>
+        <div class="col-sm-6">
+            <h1> 
+                <span> Todos los Usuarios </span>
+            </h1>
         </div>
-    </div>
+    </mat-toolbar>
 
     <div class="row mt-4">
-        <div class="col-lg-8 offset-lg-2">
+        <div class="col-lg-12 offset-lg-12">
           <div class="card">
             <div class="card-body">
 
-                <mat-label>Filtrar</mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Gabriel" #input>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="addon">Filtrar</span>
+                    <input class="form-control" (keyup)="applyFilter($event)" placeholder="Ex. Gabriel" #input aria-describedby="addon">
+                </div>
 
                 <hr>
                   
@@ -30,13 +32,17 @@
                         <td mat-cell *matCellDef="let user"> {{user.email}} </td>
                     </ng-container>
                     <ng-container matColumnDef="Otro">
+
                         <th mat-header-cell *matHeaderCellDef> Copiar ID </th>
                         <td mat-cell *matCellDef="let user"> 
-                            <button [cdkCopyToClipboard]="user.uid">Copiar ID</button>
-                        </td>
+                            <button mat-raised-button style="background-color: #c72c41;color:white;" [cdkCopyToClipboard]="user.uid">
+                                <mat-icon>file_copy</mat-icon>
+                            </button>
+                        </td>                    
+
                     </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" ></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
                     <tr class="mat-row" *matNoDataRow>
