--- a/src/app/modules/dashboard/home/home.component.html
+++ b/src/app/modules/dashboard/home/home.component.html
@@ -1,29 +1,36 @@
 <mat-toolbar>
-    <span>Home</span>
-<!--
-    <button mat-button disabled="true"> Buscar </button>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Prueba" #input>
--->
+    <button mat-raised-button > Buscar </button>
+    <div class="col-sm-6">
+        <input type="text" class="form-control" [(ngModel)]="searchValue" (input)="onSearchTextChanged()">
+    </div>
 </mat-toolbar>
 
 <div style="padding: 16px;"> 
-    <div fxLayout="row wrap" fxLayoutGap="16px grid">
-        <div class="container mt-5">
-            <mat-grid-list cols="2" rowHeight="150px" >
-                <mat-grid-tile *ngFor="let organization of organizationList" >
-                <mat-card style="margin-bottom: 16px;width: 75%;"  >
-                    <mat-card-title>{{organization.name}}</mat-card-title>
-                    <mat-card-content>
-                        <p>Prueba Card</p>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <button mat-button (click)="goTo(organization.id)">Visitar</button>
-                    </mat-card-actions>
-                </mat-card>
-                </mat-grid-tile>
-            </mat-grid-list>
-        </div>
-    </div>
+    
+</div>
+
+<div class="row" style="padding: 16px;">
+    <ng-container *ngFor="let organization of organizationList">
+        <div class="col-sm-4" *ngIf="searchValue === '' 
+        || organization.name!.toLowerCase().includes(searchValue)
+        || organization.name!.includes(searchValue) ">
+
+                <div class="card" style="margin-top:20px;">
+                    <div class="card-image">
+                        <img src="../../../../assets/img/default.png" alt="Organization photo">
+                    </div>
+                    <div class="card-body">
+                        <h1 class="card-title">{{organization.name}}</h1>
+                        <div class="card-text text-black-50">{{organization.city}}</div>
+                        <hr>
+                        <section class="pull-right" align="left">
+                            <button mat-raised-button (click)="goTo(organization.id)">Visitar</button>
+                        </section>
+                    </div>
+                </div>
+
+        </div>    
+    </ng-container>
 </div>
 
 
